@@ -50,7 +50,7 @@ class testTemplateInheritance extends CWebTest {
 	/**
 	 * Creates a new item on the template and checks that the item matches the original.
 	 *
-	 * @todo implement the test
+	 * @todo
 	 */
 	public function testTemplateInheritance_CreateItem() {
 		$this->login('templates.php');
@@ -108,7 +108,7 @@ class testTemplateInheritance extends CWebTest {
 	/**
 	 * Creates a new trigger on the template and checks that the inherited trigger matches the original.
 	 *
-	 * @todo implement the test
+	 * @todo
 	 */
 	public function testTemplateInheritance_CreateTrigger() {
 		$this->login('templates.php');
@@ -156,7 +156,7 @@ class testTemplateInheritance extends CWebTest {
 	/**
 	 * Creates a new graph on the template and checks that the inherited graph matches the original.
 	 *
-	 * @todo implement the test
+	 * @todo
 	 */
 	public function testTemplateInheritance_CreateGraph() {
 		$this->login('templates.php');
@@ -397,10 +397,84 @@ class testTemplateInheritance extends CWebTest {
 	/**
 	 * Creates a new graph prototype on the template and checks that the inherited graph prototype matches the original.
 	 *
-	 * @todo implement the test
+	 * @todo
 	 */
 	public function testTemplateInheritance_CreateGraphPrototype() {
-		$this->markTestIncomplete();
+		$this->login('templates.php');
+
+		// create a graph
+		$this->button_click('link='.$this->templateName);
+		$this->wait();
+		$this->button_click('link=Discovery rules');
+		$this->wait();
+		$this->button_click('link=Test LLD');
+		$this->wait();
+		$this->button_click('link=Graph prototypes');
+		$this->wait();
+		$this->button_click('form');
+		$this->wait();
+
+		$this->input_type('name', 'Test LLD graph');
+		$this->input_type('width', '950');
+		$this->input_type('height', '250');
+		$this->dropdown_select('graphtype', 'Normal');
+		$this->checkbox_unselect('legend');
+		$this->checkbox_unselect('showworkperiod');
+		$this->checkbox_unselect('showtriggers');
+		$this->checkbox_select('visible_percent_left');
+		$this->input_type('percent_left', '4');
+		$this->input_type('percent_right', '5');
+		$this->checkbox_select('visible_percent_right');
+		$this->dropdown_select('ymin_type', 'Calculated');
+		$this->dropdown_select('ymax_type', 'Calculated');
+
+		$this->button_click('add_protoitem');
+		$this->waitForPopUp("zbx_popup", "30000");
+		$this->selectWindow("name=zbx_popup");
+		$this->button_click("//span[text()='Test LLD item']");
+		$this->selectWindow(null);
+		sleep(1);
+
+		$this->button_click('add_item');
+		$this->waitForPopUp("zbx_popup", "30000");
+		$this->selectWindow("name=zbx_popup");
+		$this->button_click('link=Test LLD item1');
+		$this->selectWindow(null);
+		sleep(1);
+
+		$this->button_click('save');
+
+		// check that the inherited graph matches the original
+		$this->open('hosts.php');
+		$this->wait();
+		$this->button_click('link='.$this->hostName);
+		$this->wait();
+		$this->button_click('link=Discovery rules');
+		$this->wait();
+		$this->button_click('link=Test LLD');
+		$this->wait();
+		$this->button_click('link=Graph prototypes');
+		$this->wait();
+
+		$this->ok($this->templateName.': Test LLD graph');
+		$this->button_click('link=Test LLD graph');
+		$this->wait();
+
+		$this->assertElementValue('name', 'Test LLD graph');
+		$this->assertElementValue('width', '950');
+		$this->assertElementValue('height', '250');
+		$this->assertAttribute('//*[@id="graphtype"]/option[1]/@selected', 'selected');
+		$this->assertFalse($this->isChecked('legend'));
+		$this->assertFalse($this->isChecked('showworkperiod'));
+		$this->assertFalse($this->isChecked('showtriggers'));
+		$this->assertTrue($this->isChecked('visible_percent_left'));
+		$this->assertElementValue('percent_left', '4.00');
+		$this->assertTrue($this->isChecked('visible_percent_right'));
+		$this->assertElementValue('percent_right', '5.00');
+		$this->assertAttribute('//*[@id="ymin_type"]/option[1]/@selected', 'selected');
+		$this->assertAttribute('//*[@id="ymax_type"]/option[1]/@selected', 'selected');
+		$this->ok('Template inheritance test host: Test LLD item');
+		$this->ok('Template inheritance test host: Test LLD item1');
 	}
 
 	/**
