@@ -36,6 +36,8 @@ A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression fiel
 
 Bug fixes:
 ..F....... [ZBX-6102] fixed type of web.httpconf.showdisabled profile record (Sasha)
+A.F....... [ZBX-6099] fixed event.get select_acknowledges count returning incorrect results if no acknowledges exist (Pavels)
+........S. [ZBX-6065] removed useless deletes when housekeeper deletes old history (Sasha)
 A......... [ZBX-6078] fixed graph item creating (Eduards)
 A......... [ZBX-6050] fixed duplicate step name validation in httptest.create and httptest.update (Pavels)
 A......... [ZBX-5846] removed the graphitem.getobjects method (Pavels)
